       This behavior matches that currently used by IE and Navigator.
    3. No order is guaranteed for parameters from forms, contrary to the HTML 4.01 spec
    4. No parameter validation is done for requests built from links

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
22-Nov-2001
Additions:
   1. ServletUnit now handles protected URLs defined in web.xml, along with both Basic and Form authentication. Logins
      with non-blank usernames are also accepted, with the password being interpreted as a comma-separated list of
      role names.
   2. ServletUnit now handles servlet initialization parameters defined in web.xml

Problems fixed:
   1. ServletUnit now handles URL-encoded parameter names properly.

14-Nov-2001
Acknowledgements:
    Thanks to Benoit Xhenseval for adding a mechanism to handle HTML parser errors.

Additions:
   1. ServletUnit now compiles against Servlet 2.3
   2. HttpUnitOptions now has methods addHtmlErrorListener and removeHtmlErrorListener. If a listener is registered,
      it will be invoked for every error or warning generated by the parser, indicating the URL, line and column number
      of the error and a textual description of the problem.

Problems fixed:
   1. HttpUnit should now be more tolerant of missing character encodings

12-Nov-2001
Problems fixed:
   1. WebSphere cookie values ending with "=" or "==" are now handled.

 9-Nov-2001

Acknowledgements:
    Thanks to Dave Glowacki for finding and fixing another problem with parsing of link parameter names without values.

Problems Fixed:
    1. Links with parameters with no "=" were being treated as though they had "="

 8-Nov-2001
Acknowledgements:
    Thanks to Bradley Smith for implementing getParameterNames in ServletUnit.

Problems fixed:
   1. ServletUnit was not decoding its request parameters
   2. ServletUnit's HttpRequest.getParameterNames method was not implemented

Additions: