@@ -57,7 +57,8 @@ explore development and testing with HttpUnit.
 <p>Each section of the tutorial will address a specific use of the system, and show how HttpUnit and ServletUnit can be used
 to write tests which verify that functionality. You should begin each section by copying the initial directory, which includes
 an ant build script and some classes that you will need to complete it.  Running the ant script will compile the code and
-run the tests. After you implement each test, it should fail until you then add the implementation.</p>
+run the tests. If you are not using ant, compile and run tutorial.TutorialTestSuite. After you implement each test,
+it should fail until you then add the implementation.</p>
 
 <p>Tasks</p>
 
