@@ -9,15 +9,17 @@
 <p class="location"><a href="index.html">Tutorial</a>
 <img src="arrow_yellow.gif" width=13 height=9 align=bottom ALT="-&gt;">Task 2</p>
 <h1>Controlling access to the application</h1>
-<p>Only the administrator is supposed to be able to edit the pool, but there is nothing in the code written so far
-which enforces it. The servlet API provides ways to restrict application to servlets. As part of this task, we will
-use the Basic Authentication approach, which causes the browser to pop up a challenge dialog. The more common form-based
-authentication is handled the same way that all forms should be. In addition, we will create a front-end page with links
-to those pages a user is permitted to access.
+<p>At this point, we have a working pool editor, accessible only to a user with the appropriate assigned role. Any other
+user will be refused when they try to access the editor. We would like to go further, and provide a common front page
+to the application for all users, which will provide links to the permitted pages only.</p>
 
+<b>This is not written</b>
+<!--
 To begin the tutorial, create a working directory and expand <a href="task2.zip">this archive</a> into it.
 Either create a jars directory and copy httpunit.jar, Tidy.jar, and xerces.jar into it, or make sure that they are on
 your classpath and invoke ant passing the classpath as a property.
 You will write your code in the src/tutorial sub-directory.
 
-Once you are ready, proceed to <a href="task2access-authentication.html">step one</a> to begin the tutorial.
+Once you are ready, proceed to <a href="task2access-authentication.html">step one</a> to begin the tutorial. -->
+
+</body></html>
